--- a/styles/indexstyles.css
+++ b/styles/indexstyles.css
@@ -7,7 +7,7 @@ html,body {
 main{
     display: flex;
     flex-direction: column;
-    margin-top:40px
+    margin-top: 0;
 }
 .main_section{
     display:grid;
