--- a/styles/recipesstyles.css
+++ b/styles/recipesstyles.css
@@ -7,7 +7,7 @@
 body {
     display: flex;
     flex-direction: column;
-   
+    min-height: 100vh;
 }
 
 html, body{
@@ -24,7 +24,7 @@ html, body{
     padding: 20px;
     background-color: rgb(136, 156, 168);
     flex: 1;
-    height: 100vh; 
+    min-height: 0;
 }
 
 .top_section {
@@ -82,6 +82,7 @@ footer {
 
     .recipe_img {
         width: 100%;
-        height: 1000px
+        height: auto;
     }
 }
+
