--- a/styles/steakcheese.css
+++ b/styles/steakcheese.css
@@ -14,7 +14,7 @@ footer {
 main{
     display: flex;
     flex-direction: column;
-    margin-top: 40px;
+    margin-top: 0;
     grid-template-columns: 50 50;
     grid-template-rows: 50 50;
 }
